@@ -5,6 +5,7 @@ Changes in <next release>:
  * Avoid error in 2d data creation
  * Fix problems with unicode characters in plugins in Python 2.x
  * Clip axis to sensible range -1e100->1e100
+ * Handle unicode errors from operating system in Veusz scripts
 
 Changes in 1.23.1:
  * Enable compression in exported files (Benjamin K. Stuhl)
